Added code attribution

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,10 @@
+/*************************************
+ * Title: Homepage CSS
+ * Author: Fred Marble
+ * Date: 24 January 2021
+ * Modified By: George Henderson, Perry Fulfs
+ * Description: This file contains all the styles for the indes.html Homepage.
+ * ***********************************/
 /*Container Patterns*/
 .logo {
   width:150px;
